skill section responsive fixed, dark mode fixed

--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -23,8 +23,9 @@
         row-gap: 16px;
 
         .Projects__content {
-            width: 32%;
-            background-color: #edf2f4;
+            width: 300px;
+            height: 450px;
+            // background-color: #edf2f4;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -123,6 +124,7 @@
 
             .Projects__content {
                 width: 100%;
+                height: max-content;
             }
         }
     }
