--- a/src/components/skills/Skills.scss
+++ b/src/components/skills/Skills.scss
@@ -11,6 +11,7 @@
         flex-direction: column;
         align-items: center;
         gap: 16px;
+        flex-wrap: wrap;
         margin-bottom: 16px;
 
         .Skills__headingText {
@@ -28,15 +29,16 @@
             display: flex;
             justify-content: space-between;
             gap: 20px;
+            flex-wrap: wrap;
 
             .Skills__box {
-                width: 24%;
+                width: 220px;
+                min-height: 300px;
                 display: flex;
                 align-items: center;
                 flex-direction: column;
                 padding: 10px 10px;
                 border-radius: 4px;
-                background-color: #edf2f4;
                 transition: transform 0.3s ease-in-out;
                 overflow: hidden;
 
@@ -172,7 +174,7 @@
                 gap: 4px;
 
                 .devProficiency__iconBox {
-                    padding: 4 8px;
+                    padding: 4px 8px;
 
                     &::after {
                         display: none;
